samples/_failures_safe/1761249282_5c8a3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52e37923.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_52e37923.c:140:9: error: expected expression at end of input
  140 |         if (strcmp(entry->level, level) == 0)
      |         ^~
./samples/SAFE/__tmp_52e37923.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_52e37923.c:140:9: error: expected declaration or statement at end of input
